@@ -12,6 +12,8 @@ Revision history for OpenTelemetry
     * Injection and extraction methods for processors catch errors
       from their callbacks as required by
       https://opentelemetry.io/docs/specs/otel/error-handling/#guidance
+    * Validate initial values for TraceContext::TraceFlags: they
+      must be in the 0-255 range (inclusive) or they are ignored
 
 0.015     2023-11-09 23:42:47+00:00 Europe/London
 
